# pandora

./: .gitignore  Dockerfile  GUI.py  LICENSE  Makefile  README.md  _connection.py  apptainer_instructions.md  benchmark.sh  boot_db.sh  cirq2db.py  cirq2db_test.py  collect.sql  config_sqlscript.json  db_config.py  default_config.json  dummy.json  installation_instructions.md  ls_procedures_test.py  lumi_config.json  main.py  maslov_files_reader.py  maslov_test.py  mem.sh  pandora.slurm  pandora_minetest_server.py  patcher_test.py  postgresql.conf  postgresql_basic.conf  procedures_test.py  pyproject.toml  qualtran2db.py  readout.sh  readout_epyc.sh  readout_threadripper.sh  requirements.txt  requirements_arxiv.txt  requirements_new.txt  run_apptainer.sh  run_apptainer_lumi.sh  (+11 more)
apptainer/: README.md  apptainer_readme.md  apptainer_util.sh  dockerfile  exec.sh  execinapp.sh  project.apptainer  requirements.txt
benchmarking/: adder_tests.py  benchmark_adders.py  benchmark_cirq.py  benchmark_db.py  benchmark_mqt.py  benchmark_pandora.py  benchmark_qiskit.py  benchmark_qiskit_removal.py  benchmark_qualtran.py  benchmark_tket.py  cirq_util.py  plot_figs.py  verification.py
examples/: adders.md  equivalence.md  speed_benchmark.md  targeted_decomposition_collect_group.py  targeted_decomposition_first_instance.py
generic_procedures/: _sql_generate_table.sql  cancel_single_qubit.sql  cancel_single_qubit_bernoulli.sql  cancel_two_qubit.sql  cancel_two_qubit_bernoulli.sql  commute_cx_ctrl_target_bernoulli.sql  commute_single_control_left.sql  commute_single_control_left_bernoulli.sql  commute_single_control_right.sql  commute_single_control_right_bernoulli.sql  cx_to_hhcxhh.sql  cx_to_hhcxhh_bernoulli.sql  cx_to_hhcxhh_visit.sql  generate_edge_list.sql  (+8 more)
(+199 files in other folders)
