[metadata]
name = pandora 
description = "Pandora"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ioanamoflic/pandora

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = ~=3.8

install_requires =
    qualtran==0.4
    psycopg2-binary
    requests
    pytest
    # pytket
    ipython==8.30
    igraph
    pyLIQTR==1.3.3
    openfermion==1.6.1
    pyscf==2.7.0
    qb-gsee-benchmark@git+https://github.com/isi-usc-edu/qb-gsee-benchmark.git@4c547e8ac8ee0b29ac42ad6b89ec8a92cefc6506

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest~=6.2
